chore(package): bumped up package versions

--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "Sharable pug-lint config used by Rowupper.",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint --quiet *.js",
+    "lint": "eslint --quiet .",
     "test": "npm run lint"
   },
   "license": "MIT",
   "devDependencies": {
-    "eslint": "~4.19.1",
-    "eslint-config-rowupper": "~0.0.1"
+    "eslint": "~5.9.0",
+    "eslint-config-rowupper": "~0.0.3"
   }
 }
