chore(package): added publish script

--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint --quiet .",
-    "test": "npm run lint"
+    "test": "npm run lint",
+    "publish": "np --any-branch --yolo"
   },
   "license": "MIT",
   "devDependencies": {
     "eslint": "~5.9.0",
-    "eslint-config-rowupper": "~0.0.3"
+    "eslint-config-rowupper": "~0.0.3",
+    "np": "~3.0.4"
   }
 }
